cb/L7_K8S_web_api_internet/web-cb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-cb
    #version: v1
  name: web-cb-v1
spec:
  selector:
    matchLabels:
      app: web-cb
      #version: v1
  template:
    metadata:
      labels:
        app: web-cb
        #version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        #'consul.hashicorp.com/connect-service-protocol': 'http'
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/service-tags': 'v1'
        'consul.hashicorp.com/service-meta-version': '1'
        'consul.hashicorp.com/connect-service-upstreams': 'api-cb:9092'

    spec:
      serviceAccountName: web-cb
      containers:
      - name: web-cb
        image: nicholasjackson/fake-service:v0.19.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9091
