cb/L7_K8S_web_api_internet/api-cb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cb-svc
  labels:
    app: api-cb-svc
spec:
  selector:
    #app: api-cb-svc
    app: api-cb
  ports:
  - name: http
    port: 9092
    targetPort: 9092
