cb/L7_K8S_web_api_internet/web-cb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cb-svc
  labels:
    app: web-cb-svc
spec:
  selector:
    #app: web-cb-svc
    app: web-cb
  ports:
  - name: http
    port: 9091
    targetPort: 9091
